# OGAS

./: .gitignore  CMakeLists.txt  README.md
src/cameras/: ProjectCamera.cpp  ProjectCamera.h
src/commons/: RTCommon.cpp  RTCommon.h
src/core/: OGAS.h  accelerator.h  bxdf.h  camera.cpp  camera.h  filter.h  integrator.cpp  integrator.h  light.h  material.cpp  material.h  parser.cpp  parser.h  primitives.h  sampler.h  scene.h  spectrum.h
src/integrators/: SamplerIntegrator.cpp  SamplerIntegrator.h  whitted.cpp  whitted.h
src/main/: OGAS.cpp  OGAS.h
src/samplers/: RandomSampler.cpp  RandomSampler.h
